# InventorySystem

./: .env.example  .gitignore  AI_FEATURES_ROADMAP.md  API_REFERENCE.md  Architecture.md  CLAUDE.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DEVELOPMENT_LOG.md  MICRO_SPRINT_PLANS.md  OPENAI_EMBEDDINGS_SETUP.md  PHASE_2_PLAN.md  PROXMOX_DEPLOYMENT_GUIDE.md  README.md  RUNBOOK.md  SECURITY.md  SEMANTIC_SEARCH_GUIDE.md  TESTING_GUIDE.md  TESTING_RUNBOOK.md  WEAVIATE_INTEGRATION_PHASE.md  deploy.sh  docker-compose.yml
backend/: .env.development  .flake8  Dockerfile  Dockerfile.dev  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  inventory.db  migrate_to_openai_embeddings.py  migrate_to_weaviate.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  test_category_operations.py  test_postgres_location.py  test_postgres_tables.py  weaviate_backup_20250703_141312.json
backend/alembic/: env.py
backend/alembic/versions/: 15fd6a10550c_add_category_model.py  37c062614055_add_item_movement_history_table_for_.py  40eb957f8f3f_add_inventory_table_and_remove_location_.py  (+5 more)
backend/app/: main.py
backend/data/: inventory.db
backend/fresh_venv/: pyvenv.cfg
backend/scripts/: diagnose_environment.py  manage_migrations.py  run_tests_safe.py  setup_postgres_database.py  setup_test_environment.py  verify_frontend_phase1.py  verify_step_1_2b.py
backend/tests/: conftest.py  test_api_basic.py  test_api_error_scenarios.py  test_api_integration_workflows.py  test_api_inventory_operations.py  test_api_items_comprehensive.py  test_api_locations.py  test_api_performance_monitoring.py  test_api_validation_business_rules.py  test_category_model.py  test_database_base.py  test_error_handler.py  test_inventory_model.py  test_inventory_service.py  test_item_model.py  test_item_service.py  test_location_category_integration.py  test_location_category_integration_simple.py  test_location_model.py  test_main.py  test_movement_service.py  test_movement_validation.py  test_performance_optimization.py  test_weaviate_service.py
frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt  run_frontend_tests.py
frontend/.streamlit/: config.toml
frontend/components/: ai_generation.py  auth.py  category_management.py  error_boundary.py  import_export.py  item_management.py  item_movement.py  keyboard_shortcuts.py  location_templates.py  movement_validation.py  performance.py  photo_capture.py  validation.py  visualizations.py
frontend/config/: auth_config.yaml
frontend/pages/: 01_📊_Dashboard.py  02_📍_Locations.py  03_⚙️_Manage.py  04_🏷️_Categories.py  05_📦_Items.py  06_🎯_Movement.py
frontend/scripts/: verify_frontend_phase2.py
frontend/tests/: test_category_management.py  test_error_boundaries.py  test_error_boundary_concepts.py  test_error_handling_infrastructure.py  test_page_error_boundaries.py
frontend/utils/: api_client.py  config.py  error_handling.py  helpers.py  notifications.py  performance.py
(+45 files in other folders)
