[tool.poetry]
name = "home-inventory-backend"
version = "0.1.0"
description = "Backend API for Home Inventory System"
authors = ["Development Team <dev@inventory.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"  # Use Python 3.12 for better compatibility
# FastAPI and dependencies
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
# Database - both SQLite (dev) and PostgreSQL (prod)
sqlalchemy = "^2.0.21"  # Let Poetry resolve compatible versions
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"  # PostgreSQL async driver
psycopg2-binary = "^2.9.9"  # PostgreSQL sync driver for Alembic
alembic = "^1.13.1"
greenlet = "^3.0.0"  # Required for SQLAlchemy async
# Additional utilities
python-dateutil = "^2.8.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
# Code quality
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.group.prod.dependencies]
# Production optimizations - use compatible version
# Note: Can override to 2.0.23 in production deployment if needed

[tool.poetry.scripts]
test = "run_tests:main"
start = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "fastapi.*",
    "uvicorn.*",
    "pytest.*",
]
ignore_missing_imports = true